Fredrik Bergholtz - Sun Mar 6 2005
	steroids uses global screen_info and pz_get_gc, drawing buffered

Alastair S - Sat Mar 5 2005
	bluecube: mini-ised; global functions made static where needed
	ambiguously named globals renamed
	calendar no longer redraws everything when scrolling through

Alastair S - Thu Mar 3 2005
	added matrix, a matrix screen simulation

Alastair S - Tue Mar 1 2005
	calc and othello are now relative
	image viewer zoom global fix

Alastair S - Thu Feb 24 2005
	slider is now relative to screen size; is now grey also
	screen_info globalized
	allowed for global settings accross GCs

Alastair S - Sun Feb 21 2005
	calendar mini-ised and uses gridlines
	uses bitmaps for the numbers

Courtney Cavin - Fri Feb 14 2005
	implemented new Makefile
	Games moved to Fun

Alastair S - Fri Feb 14 2005
	ported cube from rockbox - a spinning 3D graphics demo
	 - changed control system, stats display
	 - added zoom, added solid rendering
	
Courtney Cavin - Fri Feb 14 2005
	changed some mp3 error messages to pz_perror
	mini-ized textviewer and fixed a few small bugs
	
Courtney Cavin - Fri Feb 12 2005
	global error functions added
	please use pz_error for custom errors & pz_perror for errno based ones 
	allowed for KEY_UP events to be recognized by applications

Courtney Cavin - Fri Feb 11 2005
	new_message_window now wraps lines

Courtney Cavin - Fri Feb 11 2005
	enabled browser execution
	 - open apps in a seperate virtual terminal
	 - return to podzilla when execution finished

Matthis - Tue Feb 08 2005
	bluecube changes:
	 - falling cubes are colored when falling and white when fell
	 - movement left-right with the scroll wheel, adapted wheel sensitivity
	 - high score

Alastair S - Tue Feb 08 2005
	MAX_MENU_ITEMS is now a variable
	menu, Pong, Nimesweeper, and browser are now relative to screen size
	can now unflag mines in Nimesweeper
	battery image is now relative to the right side of the screen

Bernard Leach - Friday Feb 04 2005